Update to 1.20
Also cleans up the build script quite a bit