@@ -1,7 +1,5 @@
 package vazkii.neat;
 
-import com.google.common.collect.ImmutableList;
-
 import java.util.List;
 
 public class NeatConfig {
@@ -35,7 +33,7 @@ public class NeatConfig {
 		List<String> blacklist();
 	}
 
-	public static final List<String> DEFAULT_DISABLED = ImmutableList.of("minecraft:shulker", "minecraft:armor_stand", "minecraft:cod", "minecraft:salmon", "minecraft:pufferfish", "minecraft:tropical_fish");
+	public static final List<String> DEFAULT_DISABLED = List.of("minecraft:shulker", "minecraft:armor_stand", "minecraft:cod", "minecraft:salmon", "minecraft:pufferfish", "minecraft:tropical_fish");
 
 	public static ConfigAccess instance;
 }
